[project]
name = "db-client"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gradio>=6.8.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jupyterlab>=4.5.5",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-google-genai==3.0.0",
    "langchain-google-vertexai==3.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
    "python-dotenv>=1.0",
    "python-pptx>=1.0.2",
]
